<resources>
    <string name="app_name">1</string>
    <string name="Smart">Мое смарт-устройство</string>
    <string name="km">1.3 km</string>
    <string name="kkal">59 kcal</string>
    <string name="min">30 min</string>
    <string name="steps">1583 steps</string>
    <string name="kg">62 kg</string>
    <string name="bmp">82 bmp</string>

    <string name="mar">Маршруты</string>
    <string name="info">Краткая информация</string>
</resources>